Router outlet is ok

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,7 +1,3 @@
-
-<!-- <router-outlet></router-outlet>  -->
-<app-headeradmin></app-headeradmin>
-<!-- <app-client-details></app-client-details> -->
-<app-user-list-admin></app-user-list-admin>
+ <router-outlet></router-outlet>  
 <app-footer></app-footer>
 
