--- a/front/src/app/components/admin/edit-comic/edit-comic.component.scss
+++ b/front/src/app/components/admin/edit-comic/edit-comic.component.scss
@@ -52,3 +52,16 @@
   max-width: 100%;
   height: auto;
 }
+.btn-short{
+  
+  width: auto;
+  height: auto;
+  padding:1px;
+  color: white;
+}
+.listGenres{
+  width: 100%;
+}
+.genreItem{
+  display: inline-block;
+}
