added icons to contact html

--- a/front/src/app/components/user/contact/contact.component.html
+++ b/front/src/app/components/user/contact/contact.component.html
@@ -1,1 +1,16 @@
-<p>contact works!</p>
+<section class="container">
+    <h1 class="text-center">CONTACTO</h1>
+    <div class="row ">
+      <div class="icons col-md-5">
+        <i class="bi bi-envelope">
+          <p>marketplace@gmail.com</p>
+        </i>
+        <i class="bi bi-geo-alt-fill">
+          <p>Rúa Soriano, 798, Entre suelo 9º, 08505, Barcelona</p>
+        </i>
+        <i class="bi bi-telephone-fill">
+          <p>(+34) 629.055.64</p>
+        </i>
+      </div>   
+ 
+  
