--- a/front/src/app/components/user/contact/contact.component.html
+++ b/front/src/app/components/user/contact/contact.component.html
@@ -12,5 +12,52 @@
           <p>(+34) 629.055.64</p>
         </i>
       </div>   
- 
+      <div class="vr custom-bg-color d-md-none"></div>
+      <div class="container-2 col-md-5 ">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="well well-sm">
+              <form class="form-horizontal" method="post">
+                <fieldset>
+                  <div class="form-group">
+                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                    <div class="col-md-8">
+                      <input id="fname" name="name" type="text" placeholder="Nombre" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                    <div class="col-md-8">
+                      <input id="lname" name="name" type="text" placeholder="Email" class="form-control">
+                    </div>
+                  </div>
+  
+                  <div class="form-group">
+                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                    <div class="col-md-8">
+                      <input id="email" name="email" type="text" placeholder="Asunto" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <span class="col-md-1 col-md-offset-2 text-center"><i
+                        class="fa fa-pencil-square-o bigicon"></i></span>
+                    <div class="col-md-8">
+                      <textarea class="form-control" id="message" name="message" placeholder="Mensaje"
+                        rows="7"></textarea>
+                    </div>
+                  </div>
+  
+                  <div class="form-group">
+                    <div class="col-md-12 text-center">
+                      <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                    </div>
+                  </div>
+                </fieldset>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   
