--- a/front/src/app/components/admin/user-list-admin/user-list-admin.component.html
+++ b/front/src/app/components/admin/user-list-admin/user-list-admin.component.html
@@ -1,3 +1,4 @@
+<app-headeradmin></app-headeradmin>
 <div class="container">
     <h1 class="name">Listado de usuarios</h1>
     <div class="container-search">
