Place holder introduce tu busqueda

--- a/front/src/app/components/admin/modificate-comics/modificate-comics.component.html
+++ b/front/src/app/components/admin/modificate-comics/modificate-comics.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="container-search">
-    <input type="text" class="search-up" (keyup)="applySearch($event)">
+    <input type="text" class="search-up" placeholder="Introduce tu búsqueda" (keyup)="applySearch($event)">
   </div>
   <div class="table-responsive">
     <table class="table table-striped">
