--- a/front/src/app/shared/headeradmin/headeradmin.component.scss
+++ b/front/src/app/shared/headeradmin/headeradmin.component.scss
@@ -47,8 +47,7 @@
     }
 
     .navbar-nav{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        display: flex;
         justify-content: right;
     
     }
@@ -70,8 +69,7 @@
     }
 
     .navbar-nav {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        display: flex;      
         justify-content: right;
     }
 
@@ -93,8 +91,7 @@
     }
 
     .navbar-nav {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        display: flex;       
         justify-content: right;
        
     }
