poner nombres a las paginas

--- a/front/src/app/components/admin/client-details/client-details.component.scss
+++ b/front/src/app/components/admin/client-details/client-details.component.scss
@@ -29,7 +29,10 @@ table {
   border: 0.4vh solid black;
   width: 50vw;
 }
-
+h1{
+  text-align: center;
+  margin-top: 3vh;
+}
 tbody {
   vertical-align: middle;
 }
