--- a/front/src/app/components/user/comic-detail/comic-detail.component.html
+++ b/front/src/app/components/user/comic-detail/comic-detail.component.html
@@ -1,5 +1,5 @@
 <app-headerclient></app-headerclient>
-
+<h1>Detalles de Cómic</h1>
 <div *ngIf="comic" class="row my-5" style="overflow-y: auto; ">
   <div class="col-md-6 col-sm-12" >
     <img [src]="'http://localhost:8000/files/'+comic.photo" alt="{{ comic.photo }} Cover" class="img-fluid m-5">
