--- a/front/src/app/components/user/shoping-cart-client/shoping-cart-client.component.html
+++ b/front/src/app/components/user/shoping-cart-client/shoping-cart-client.component.html
@@ -1,6 +1,6 @@
 <app-headerclient></app-headerclient>
 <div class="container">
-
+<h1>Carro de Compras</h1>
   <div class="table-responsive">
     <table class="table table-striped">
       <thead>
