--- a/front/src/app/components/user/shoping-cart-client/shoping-cart-client.component.scss
+++ b/front/src/app/components/user/shoping-cart-client/shoping-cart-client.component.scss
@@ -10,6 +10,9 @@ table {
   border-collapse: separate;
   border: 0.4vh solid black;
 }
+h1{
+  margin-top: 3vh;
+  text-align: center; }
 .trash{
   cursor: pointer;
 }
