--- a/front/src/app/components/admin/client-details/client-details.component.html
+++ b/front/src/app/components/admin/client-details/client-details.component.html
@@ -1,4 +1,5 @@
 <app-headeradmin></app-headeradmin>
+<h1>Detalles de clientes</h1>
 <div class="container-global">
     <div class="container-left">
         <h2>Cliente</h2>
