--- a/front/src/app/components/user/user-purchase-history/user-purchase-history.component.scss
+++ b/front/src/app/components/user/user-purchase-history/user-purchase-history.component.scss
@@ -9,6 +9,9 @@ table {
     border-collapse: separate;
     border: 0.4vh solid black;
   }
+  h1{
+    margin-top: 3vh;
+    text-align: center; }
   a{
     cursor:pointer;
   }
