--- a/front/src/app/components/user/contact/contact.component.html
+++ b/front/src/app/components/user/contact/contact.component.html
@@ -1,3 +1,4 @@
+<app-headerclient></app-headerclient>
 <section class="container">
     <h1 class="text-center">CONTACTO</h1>
     <div class="row ">
@@ -60,4 +61,5 @@
       </div>
     </div>
   </section>
+  <app-footer></app-footer>
   
