added contact in footer

--- a/front/src/app/shared/footer/footer.component.html
+++ b/front/src/app/shared/footer/footer.component.html
@@ -4,6 +4,7 @@
       <div class="col-md-6 col-12">
         <p>&copy; 2023 Comic Books. Todos los derechos reservados.</p>
       </div>
+      <a routerLink="/contact">Contacta con nosotros</a>
       <div class="col-md-6 col-12 redes-sociales">
         <ul class="social-footer">
           <li class="">
