--- a/front/src/app/shared/footer/footer.component.scss
+++ b/front/src/app/shared/footer/footer.component.scss
@@ -5,8 +5,13 @@
 .main-footer {
   position: fixed;
   bottom: 0;
-  margin-top: 5%;
+  margin-top: 5%; 
+}
 
+a{
+  text-decoration: none;
+  font-weight: 100;
+  font-size: 1.5rem;
 }
 }
 
@@ -26,8 +31,7 @@
   }
 }
 
-.main-footer {
- 
+.main-footer { 
   bottom: 0;
   left: 0;
   width: 100%;
