--- a/front/src/app/components/user/contact/contact.component.scss
+++ b/front/src/app/components/user/contact/contact.component.scss
@@ -4,6 +4,7 @@
       font-size: 2.90vh;
       padding: 1.07vh;
       font-family: 'Alice', serif;
+      margin-top: 1vh;
     }
   
     .icons {
@@ -31,7 +32,7 @@
   
   button {
     background: #1D2951;
-    margin-bottom: 3vh;
+    margin-bottom: 6vh;
   }
   
   
@@ -49,19 +50,17 @@
   
   @media (min-width:992px) {
     .container {
-  
+            
       .icons {
         margin-top: 10vh;
         margin-left: 2vh;
       }
   
-      .vr {
-        margin-left: 3vh;
-      }
-  
       .container-2 {
         margin-top: 10vh;
       }
+
+   
     }
   
   }
