added contact img and contact icon

--- a/front/src/app/shared/footer/footer.component.scss
+++ b/front/src/app/shared/footer/footer.component.scss
@@ -85,5 +85,12 @@
     li a img {
       float: right;
     }
+
+    .contact{       
+      img{
+        width: 20px;
+        height: 20px;
+      }
+    }
   }
 }
