Delete commits from Jsanlazaro

--- a/front/src/app/components/user/shoping-cart-client/shoping-cart-client.component.html
+++ b/front/src/app/components/user/shoping-cart-client/shoping-cart-client.component.html
@@ -104,7 +104,7 @@
           </table>
         </div>
         <div class="col-6 d-flex justify-content-center align-items-end "> <button
-            class="btn btn-success float-right mb-3"><b>Tramitar pedido</b></button></div>
+            class="btn btn-success float-right mb-3" (click)="placeOrder"><b>Tramitar pedido</b></button></div>
       </div>
 
 
