--- a/front/src/app/shared/footer/footer.component.scss
+++ b/front/src/app/shared/footer/footer.component.scss
@@ -1,10 +1,10 @@
 @media screen and (min-width: 768px) {
   .contact{
     img{
-      height: 20px;
+      height: 2cap;
       width: 20px;
-      margin-left: -20px;
-    margin-bottom: -6vh;
+    margin-bottom: 0.5vh;
+    float: right;
     cursor: pointer;
     }
   
