Button hiostry shop go to left

--- a/front/src/app/components/admin/detail-admin/detail-admin.component.html
+++ b/front/src/app/components/admin/detail-admin/detail-admin.component.html
@@ -15,7 +15,7 @@
     </p>
     <p class="text-justify m-3">Autor: {{ comic.author }}</p>
     <p class="m-3  text-justify">{{ comic.synopsis }}</p>
-    <h3 style="text-align: right;" class="m-5">{{ comic.price }} €</h3>
+    <h3  class="mt-2 mb-3 mx-3 text-justify ">{{ comic.price }} €</h3>
   </div>
   <div class="col-sm-5 offset-md-3 text-center">
     <button class="px-5 mx-5" (click)="openConfirmationModal()">
